--- a/kurento-one2one-call/src/main/resources/static/index.html
+++ b/kurento-one2one-call/src/main/resources/static/index.html
@@ -48,38 +48,11 @@
 	</header>
 	<div class="container">
 		<div class="page-header">
-			<h1>Tutorial 4: Video Call 1 to 1 with WebRTC</h1>
-			<p>
-				This web application consists on an one to one video call using <a
-					href="http://www.webrtc.org/">WebRTC</a>. In other words, this
-				application is similar to a phone but also with video. The <a
-					href="img/pipeline.png" data-toggle="lightbox"
-					data-title="Video Call 1 to 1 Media Pipeline"
-					data-footer="Two interconnected WebRtcEnpoints Media Elements">Media
-					Pipeline</a> is composed by two interconnected <i>WebRtcEndpoints</i>.
-				To run this demo follow these steps:
-			</p>
-			<ol>
-				<li>Open this page with a browser compliant with WebRTC
-					(Chrome, Firefox).</li>
-				<li>Type a nick in the field <i>Name</i> and click on <i>Register</i>.
-				</li>
-				<li>In a different machine (or a different tab in the same
-					browser) follow the same procedure to register another user.</li>
-				<li>Type the name of the user to be called in the field <i>Peer</i>
-					and click <i>Call</i>.
-				</li>
-				<li>Grant the access to the camera and microphone for both
-					users. After the SDP negotiation the communication should start.</li>
-				<li>The called user should accept the incoming call (by a
-					confirmation dialog).</li>
-				<li>Click on <i>Stop</i> to finish the communication.
-				</li>
-			</ol>
+			<h1>Tutorial: Video llamadas con WebRTC</h1>
 		</div>
 		<div class="row">
 			<div class="col-md-5">
-				<label class="control-label" for="name">Name</label>
+				<label class="control-label" for="name">Tu nombre</label>
 				<div class="row">
 					<div class="col-md-6">
 						<input id="name" name="name" class="form-control" type="text"
@@ -87,21 +60,22 @@
 					</div>
 					<div class="col-md-6 text-right">
 						<a id="register" href="#" class="btn btn-primary"><span
-							class="glyphicon glyphicon-plus"></span> Register</a>
+							class="glyphicon glyphicon-plus"></span> Registrarse</a>
 					</div>
 				</div>
 
-				<br /> <br /> <label class="control-label" for="peer">Peer</label>
+				<br /> <br /> <label class="control-label" for="peer">¿A quién quieres llamar?</label>
 				<div class="row">
 					<div class="col-md-6">
-						<input id="peer" name="peer" class="form-control" type="text"
-							onkeydown="if (event.keyCode == 13) call();">
+							<div id="peer" class="dropdown">
+								<button id="dropdown-btn" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Elige a un amigo
+								<span class="caret"></span></button>
+								<ul id="dropdown-menu" class="dropdown-menu"></ul>
+							</div>
 					</div>
 					<div class="col-md-6 text-right">
-						<a id="call" href="#" class="btn btn-success"><span
-							class="glyphicon glyphicon-play"></span> Call</a> <a id="terminate"
-							href="#" class="btn btn-danger"><span
-							class="glyphicon glyphicon-stop"></span> Stop</a>
+						<a id="terminate" href="#" class="btn btn-danger"><span
+							class="glyphicon glyphicon-stop"></span> Colgar</a>
 					</div>
 				</div>
 				<br /> <label class="control-label" for="console">Console</label><br>
