--- a/kurento-one2one-call/src/main/resources/static/index.html
+++ b/kurento-one2one-call/src/main/resources/static/index.html
@@ -1,45 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="cache-control" content="no-cache">
-<meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="expires" content="0">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="img/kurento.png" type="image/png" />
+	<meta charset="utf-8">
+	<meta http-equiv="cache-control" content="no-cache">
+	<meta http-equiv="pragma" content="no-cache">
+	<meta http-equiv="expires" content="0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="img/kurento.png" type="image/png" />
 
-<link rel="stylesheet"
-	href="webjars/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet"
-	href="webjars/ekko-lightbox/dist/ekko-lightbox.min.css">
-<link rel="stylesheet" href="webjars/demo-console/index.css">
-<link rel="stylesheet" href="css/kurento.css">
+	<link rel="stylesheet" href="webjars/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="webjars/ekko-lightbox/dist/ekko-lightbox.min.css">
+	<link rel="stylesheet" href="webjars/demo-console/index.css">
+	<link rel="stylesheet" href="css/kurento.css">
 
-<script src="webjars/jquery/dist/jquery.min.js"></script>
-<script src="webjars/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="webjars/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
-<script src="webjars/draggabilly/draggabilly.pkgd.min.js"></script>
-<script src="webjars/adapter.js/adapter.js"></script>
-<script src="webjars/demo-console/index.js"></script>
+	<script src="webjars/jquery/dist/jquery.min.js"></script>
+	<script src="webjars/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="webjars/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
+	<script src="webjars/draggabilly/draggabilly.pkgd.min.js"></script>
+	<script src="webjars/adapter.js/adapter.js"></script>
+	<script src="webjars/demo-console/index.js"></script>
 
-<script src="js/kurento-utils.js"></script>
-<script src="js/index.js"></script>
-<title>Kurento Tutorial 4: Video Call 1 to 1 with WebRTC</title>
+	<script src="js/kurento-utils.js"></script>
+	<script src="js/index.js"></script>
+	<title>Kurento Tutorial 4: Video Call 1 to 1 with WebRTC</title>
 </head>
+
 <body>
 	<header>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse"
-						data-target=".navbar-collapse"></button>
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"></button>
 					<a class="navbar-brand" href=".">Kurento Tutorial</a>
 				</div>
-				<div class="collapse navbar-collapse"
-					id="bs-example-navbar-collapse-1">
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a
-							href="https://github.com/Kurento/kurento-tutorial-java/tree/master/kurento-one2one-call"><span
+						<li><a href="https://github.com/Kurento/kurento-tutorial-java/tree/master/kurento-one2one-call"><span
 								class="glyphicon glyphicon-file"></span> Source Code</a></li>
 					</ul>
 				</div>
@@ -55,8 +52,7 @@
 				<label class="control-label" for="name">Tu nombre</label>
 				<div class="row">
 					<div class="col-md-6">
-						<input id="name" name="name" class="form-control" type="text"
-							onkeydown="if (event.keyCode == 13) register();" />
+						<input id="name" name="name" class="form-control" type="text" onkeydown="if (event.keyCode == 13) register();" />
 					</div>
 					<div class="col-md-6 text-right">
 						<a id="register" href="#" class="btn btn-primary"><span
@@ -67,17 +63,21 @@
 				<br /> <br /> <label class="control-label" for="peer">¿A quién quieres llamar?</label>
 				<div class="row">
 					<div class="col-md-6">
-							<div id="peer" class="dropdown">
-								<button id="dropdown-btn" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Elige a un amigo
+						<div id="peer" class="dropdown">
+							<button id="dropdown-btn" class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Elige a un amigo
 								<span class="caret"></span></button>
-								<ul id="dropdown-menu" class="dropdown-menu"></ul>
-							</div>
+							<ul id="dropdown-menu" class="dropdown-menu"></ul>
+						</div>
 					</div>
 					<div class="col-md-6 text-right">
 						<a id="terminate" href="#" class="btn btn-danger"><span
 							class="glyphicon glyphicon-stop"></span> Colgar</a>
 					</div>
 				</div>
+
+				<div id="occupied-warning" class="alert alert-warning" style="display:none;">
+				</div>
+
 				<br /> <label class="control-label" for="console">Console</label><br>
 				<br>
 				<div id="console" class="democonsole">
@@ -86,12 +86,10 @@
 			</div>
 			<div class="col-md-7">
 				<div id="videoBig">
-					<video id="videoOutput" autoplay width="640px" height="480px"
-						poster="img/webrtc.png"></video>
+					<video id="videoOutput" autoplay width="640px" height="480px" poster="img/webrtc.png"></video>
 				</div>
 				<div id="videoSmall">
-					<video id="videoInput" autoplay width="240px" height="180px"
-						poster="img/webrtc.png"></video>
+					<video id="videoInput" autoplay width="240px" height="180px" poster="img/webrtc.png"></video>
 				</div>
 			</div>
 		</div>
@@ -104,20 +102,18 @@
 				<div class="row">&copy; 2014-2015 Kurento</div>
 				<div class="row">
 					<div class="col-md-4">
-						<a href="http://www.urjc.es"><img src="img/urjc.gif"
-							alt="Universidad Rey Juan Carlos" height="50px" /></a>
+						<a href="http://www.urjc.es"><img src="img/urjc.gif" alt="Universidad Rey Juan Carlos" height="50px" /></a>
 					</div>
 					<div class="col-md-4">
-						<a href="http://www.kurento.org"><img src="img/kurento.png"
-							alt="Kurento" height="50px" /></a>
+						<a href="http://www.kurento.org"><img src="img/kurento.png" alt="Kurento" height="50px" /></a>
 					</div>
 					<div class="col-md-4">
-						<a href="http://www.naevatec.com"><img src="img/naevatec.png"
-							alt="Naevatec" height="50px" /></a>
+						<a href="http://www.naevatec.com"><img src="img/naevatec.png" alt="Naevatec" height="50px" /></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
 </body>
+
 </html>
