--- a/kurento-one2many-call/src/main/resources/static/index.html
+++ b/kurento-one2many-call/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 
 <script src="js/kurento-utils.js"></script>
 <script src="js/index.js"></script>
-<title>Kurento Tutorial 3: Video Call 1 to N with WebRTC</title>
+<title>Tutorial: Llamada en grupo con WebRTC</title>
 </head>
 <body>
 	<header>
@@ -47,53 +47,23 @@
 	</header>
 	<div class="container">
 		<div class="page-header">
-			<h1>Tutorial 3: Video Call 1 to N with WebRTC</h1>
-			<p>
-				This web application consists on an one to many video call using <a
-					href="http://www.webrtc.org/">WebRTC</a>. In other words, this is
-				an implementation of a video broadcasting application. There are two
-				types of users in this application: 1 peer sending media (let's call
-				it <i>Presenter</i>) and N peers receiving the media of the <i>Presenter</i>
-				(let's call them <i>Viewers</i>). Thus, the <a
-					href="img/pipeline.png" data-toggle="lightbox"
-					data-title="Video Call 1 to N Media Pipeline"
-					data-footer="1 WebRtcEnpoint (Presenter) is set in SendOnly mode, and its stream is sent to N WebRtcEnpoints (Viewers), whics are set in RecvOnly mode.">Media
-					Pipeline</a> is composed by 1+N interconnected <i>WebRtcEndpoints</i>.
-				To run this demo follow these steps:
-			</p>
-			<ol>
-				<li>Open this page with a browser compliant with WebRTC
-					(Chrome, Firefox).</li>
-				<li>If you would like to be the <i>Presenter</i> of the
-					communication, click on <i>Presenter</i> button. There can only be
-					one of this kind of peer, and so, if the <i>Presenter</i> peer is
-					already present, the application returns an error (see the the
-					console).
-				</li>
-				<li>Grant the access to the camera and microphone. After the
-					SDP negotiation the communication should start.</li>
-				<li>In a different machine (or a different tab in the same
-					browser) click on <i>Viewer</i> button to see the <i>Presenter</i>
-					stream.
-				</li>
-				<li>Click on <i>Stop</i> to finish the communication. When <i>Presenter</i>
-					clicks on <i>Stop</i>, the rest of <i>Viewers</i> (if any) ends the
-					communication too.
-				</li>
-			</ol>
+			<h1>Tutorial: Llamada en grupo con WebRTC</h1>
 		</div>
 		<div class="row">
 			<div class="col-md-5">
 				<div class="row">
 					<div class="col-md-12">
 						<a id="presenter" href="#" class="btn btn-success"><span
-							class="glyphicon glyphicon-play"></span> Presenter </a> <a
+							class="glyphicon glyphicon-play"></span> Quiero presentar </a> <a
 							id="viewer" href="#" class="btn btn-primary"><span
-							class="glyphicon glyphicon-user"></span> Viewer</a> <a id="stop"
+							class="glyphicon glyphicon-user"></span> Quiero ver al que presenta</a> <a id="stop"
 							href="#" class="btn btn-danger"><span
-							class="glyphicon glyphicon-stop"></span> Stop</a>
+							class="glyphicon glyphicon-stop"></span> Parar</a>
 					</div>
 				</div>
+
+				<div id="warning-msg" class="alert alert-warning" style="display:none;"></div>
+
 				<br /> <label class="control-label" for="console">Console</label><br>
 				<br>
 				<div id="console" class="democonsole">
