--- a/kurento-magic-mirror/src/main/resources/static/index.html
+++ b/kurento-magic-mirror/src/main/resources/static/index.html
@@ -23,7 +23,7 @@
 
 <script src="js/kurento-utils.js"></script>
 <script src="js/index.js"></script>
-<title>Kurento Tutorial 2: WebRTC Magic Mirror</title>
+<title>Tutorial: Magic Mirror</title>
 </head>
 
 <body>
@@ -48,28 +48,11 @@
 	</header>
 	<div class="container">
 		<div class="page-header">
-			<h1>Tutorial 2: WebRTC Magic Mirror</h1>
-			<p>
-				This application shows a <i>WebRtcEndpoint</i> connected to itself
-				(loopback) with a <i>FaceOverlay</i> filter in the middle (take a
-				look to the <a href="img/pipeline.png" data-toggle="lightbox"
-					data-title="Magic Mirror Media Pipeline"
-					data-footer="WebRtcEnpoint in loopback with a filter (FaceOverlay)">Media
-					Pipeline</a>). To run this demo follow these steps:
-			</p>
-			<ol>
-				<li>Open this page with a browser compliant with WebRTC
-					(Chrome, Firefox).</li>
-				<li>Click on <i>Start</i> button.
-				<li>Grant the access to the camera and microphone. After the
-					SDP negotiation the loopback should start.
-				<li>Click on <i>Stop</i> to finish the communication.
-				</li>
-			</ol>
+			<h1>Tutorial: Magic mirror</h1>
 		</div>
 		<div class="row">
 			<div class="col-md-5">
-				<h3>Local stream</h3>
+				<h3>Tu careto</h3>
 				<video id="videoInput" autoplay width="480px" height="360px"
 					poster="img/webrtc.png"></video>
 			</div>
@@ -82,7 +65,7 @@
 					class="glyphicon glyphicon-stop"></span> Stop</a>
 			</div>
 			<div class="col-md-5">
-				<h3>Remote stream</h3>
+				<h3>Tu careto transformado</h3>
 				<video id="videoOutput" autoplay width="480px" height="360px"
 					poster="img/webrtc.png"></video>
 			</div>
